Overview of changes in xtickertape-2.0b2

* Fixed a bug that prevented the connection status from being updated
  properly.

* Added the `-u' option to show-url command, making it possible to
  specify the URL on the command-line rather than writing it to a file
  first.

Overview of changes in xtickertape-2.0b1

* Messages containing non-ASCII characters are now sent and displayed
  correctly.

* Reworked the way dragging is handled by the Scroller widget so that
  you can perform actions on a message while dragging the scroller
  without cancelling the drag.

* Added a `send history' which records the last few messages sent by
  the current user so that they can go back and send them to other
  groups or fix the spelling.

* New command-line options: -T ticker-dir and -k keys-dir.  The former
  overrides the TICKERDIR environment variable, and the latter
  specifies the root path of a key file with a relative pathname.  If
  keys-dir is not set then it defaults to the directory containing the
  keys file.

Overview of changes in xtickertape-2.0a8

* The usenet file now supports backslashes as escape characters.  You
  can now subscribe to URLs.

* It is now possible to reply to a message in a different group by
  first selecting the message to which you are replying and then
  selecting the group to send it to.  To clear the current selection,
  click on it in the history.

* The show-url command has been completely rewritten to use the
  BROWSER environment variable as defined by ESR.

* xtickertape can now build against verion 4.1b4 of libelvin.

Overview of changes in xtickertape-2.0a7

* The path to metamail is now an X resource.

* The application now refuses to run if the app-defaults isn't found
  or has a different version number than the executable, and prints an
  error message which should hopefully help the user to address the
  problem.  [Thanks Mark White]

* Added a way to set the idle-period to test the connection after some